# platform

./: .env.example  .gitignore  DELIVERY_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VALIDATION_REPORT.md  GET_RUNNING_NOW.md  LIVE_TRADING_CHECKLIST.md  LOCAL_DEPLOYMENT.md  Makefile  Procfile  QUANT_RESEARCH_FRAMEWORK.md  QUICK_START.md  README.md  START_NOW.md  backend.code-workspace  docker-compose.yml  railway.json  run_local.sh  start-local.sh  start.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_agent_skill_tables.py  003_add_ohlcv_table.py  004_add_backtest_and_generated_strategies.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  base.py  skill_base.py  skill_executor.py  skill_registry.py  skill_router.py  types.py
backend/app/api/: middleware.py  router.py
backend/app/auth/: jwt.py  password.py  permissions.py
backend/app/backtest/: costs.py  engine.py  metrics.py  strategy_loader.py
backend/app/core/: clock.py  enums.py  events.py  exceptions.py  types.py
backend/app/data/: collector.py  yfinance_collector.py
backend/app/db/: repository.py  session.py
backend/app/exchange/: base.py  factory.py  models.py  rate_limiter.py
backend/app/market_data/: fanout.py  indicators.py  manager.py  normalizer.py  scraper.py  screener.py  seeder.py  store.py
backend/app/models/: agent.py  (+11 more)
backend/examples/: analytics_report.py  calibration_job.py  simulator_replay.py
backend/tests/: conftest.py  factories.py
(+243 files in other folders)
